CSS adjustment to ensure nowrap for QB header

--- a/src/main/resources/com/tabulaw/public/css/poc.css
+++ b/src/main/resources/com/tabulaw/public/css/poc.css
@@ -517,6 +517,7 @@ div.ro {
 			font-weight: lighter;
 			font-size: 11px;
 			letter-spacing: 0.7px;
+			white-space: nowrap;
 }
 .qbundle .qbheader .name {
 			font-size: 20px;
